Allow customization of the app name

--- a/assets/templates/email/notification.twig
+++ b/assets/templates/email/notification.twig
@@ -225,7 +225,7 @@ subject             The pre-generated subject for this notification
                         Page
                     </webversion>
                     <br><br>#}
-                    Version Warner
+                    {{ appname }}
                     {#<br><br>
                     <unsubscribe style="color:#888888; text-decoration:underline;">unsubscribe</unsubscribe>#}
                 </td>
